lamus2-1.1.1

    Changes:
        - CS2: Updated the version of the CS2 libraries.
    Fixes:
        - INDICATING BUTTONS: Fixed some issues with the ajax indicating buttons,
          including the confirmation dialogs, which had to be done in a different
          way for the ajax version of the buttons, and also the update of the
          feedback panel.

lamus2-1.1.0 (2014-12-12)

    First release adapted for the CMDI / hybrid archive.

lamus2-1.1-SNAPSHOT (2014-09-24)

    Changes:
        - DELETE WORKSPACE: In the management console, the manager is now able
          to delete workspaces without being their owner.

lamus2-1.0 (2014-08-20)

    First release